--- a/part-xx-exercises/ps07sol.qmd
+++ b/part-xx-exercises/ps07sol.qmd
@@ -1,9 +1,9 @@
 # Problem set 7 solutions {#sec-ps7sol}
 
-:::{.callout-tip}
-## Note
-This material has not yet been finalised and is still under construction. Once it is covered in lectures, this banner will be replaced.
-:::
+<!-- :::{.callout-tip} -->
+<!-- ## Note -->
+<!-- This material has not yet been finalised and is still under construction. Once it is covered in lectures, this banner will be replaced. -->
+<!-- ::: -->
 
 <!-- ## Q1. Non-dimensionalisation of the ocean model {.unnumbered} -->
 <!---->
