--- a/part-xx-exercises/ps06.qmd
+++ b/part-xx-exercises/ps06.qmd
@@ -1,9 +1,9 @@
 # Problem set 6 {#sec-ps6}
 
-:::{.callout-tip}
-## Note
-This material has not yet been finalised and is still under construction. Once it is covered in lectures, this banner will be replaced.
-:::
+<!-- :::{.callout-tip} -->
+<!-- ## Note -->
+<!-- This material has not yet been finalised and is still under construction. Once it is covered in lectures, this banner will be replaced. -->
+<!-- ::: -->
 
 ## Q1. A van der Pol equation {.unnumbered}
 Consider the van der Pol equation for $x(t)$ with $0 < \epsilon \ll 1$: 
